@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2022 The MZmine Development Team
+ * Copyright (c) 2004-2026 The mzmine Development Team
  *
  * Permission is hereby granted, free of charge, to any person
  * obtaining a copy of this software and associated documentation
@@ -26,471 +26,217 @@
 package io.github.mzmine.datamodel.identities.iontype;
 
 import io.github.mzmine.datamodel.features.FeatureListRow;
-import io.github.mzmine.datamodel.identities.iontype.networks.IonNetworkRelation;
 import io.github.mzmine.modules.dataprocessing.id_formulaprediction.ResultFormula;
-import io.github.mzmine.parameters.parametertypes.tolerances.MZTolerance;
-import java.util.HashMap;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.TreeMap;
-import java.util.stream.Collectors;
-import javafx.collections.FXCollections;
-import javafx.collections.ObservableList;
+import java.util.function.BiConsumer;
+import java.util.stream.Stream;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 /**
- * An annotation network full of ions that point to the same neutral molecule (neutral mass)
+ * An annotation network full of ions that point to the same neutral molecule (neutral mass).
+ * <p>
+ * A network is only reachable through the {@link IonIdentity#getNetwork()} back reference of the
+ * rows it contains. {@link BuildingIonNetwork} is the mutable form used while networks are
+ * assembled and merged, {@link SimpleIonNetwork} is the immutable result that is attached to the
+ * rows and saved to the project.
+ * <p>
+ * Average RT and summed height are computed on demand from the current nodes. The neutral mass is
+ * cached by both implementations because it is queried far more often, and refreshed whenever the
+ * nodes change.
  *
  * @author Robin Schmid (robinschmid@uni-muenster.de)
  */
-public class IonNetwork extends HashMap<FeatureListRow, IonIdentity>
-    implements Comparable<IonNetwork> {
-
-  // possible formulas for this neutral mass
-  private final ObservableList<ResultFormula> molFormulas = FXCollections.observableArrayList();
-  // MZtolerance on MS1 to generate this network
-  private MZTolerance mzTolerance;
-  // network id
-  private int id;
-  // neutral mass of central molecule which is described by all members of this network
-  private Double neutralMass = null;
-  // maximum absolute deviation from neutral mass average
-  private Double maxDev = null;
-  // average retention time of network
-  private double avgRT;
-  // summed height
-  private double heightSum = 0;
-  // can be used to stream all networks only once
-  // lowest row id
-  private int lowestID = -1;
-  // relationship to other IonNetworks (neutral molecules)
-  // marks as modification of:
-  private Map<IonNetwork, IonNetworkRelation> relations;
-
-  public IonNetwork(MZTolerance mzTolerance, int id) {
-    super();
-    this.mzTolerance = mzTolerance;
-    this.id = id;
-  }
-
-  public void setMzTolerance(MZTolerance mzTolerance) {
-    this.mzTolerance = mzTolerance;
-  }
+public sealed interface IonNetwork permits BuildingIonNetwork, SimpleIonNetwork {
 
   /**
-   * The ion types are undefined M+?
+   * Network ID, unique within a feature list. -1 while the network is still being built.
+   */
+  int getID();
+
+  /**
+   * A network with the given ID. All ion identities of this network are re-pointed to the returned
+   * instance, so the rows always reference the renumbered network afterwards.
    *
-   * @return
+   * @param id the new network ID
+   * @return the renumbered network, may be a new instance
    */
-  public boolean isUndefined() {
-    return values().stream().map(IonIdentity::getIonType).anyMatch(IonType::isUndefinedAdduct);
-  }
+  @NotNull IonNetwork withID(int id);
 
   /**
-   * Network ID
+   * @return unmodifiable list of the (row, ion) pairs of this network
+   */
+  @NotNull List<IonNetworkNode> getNodes();
+
+  /**
+   * Possible formulas for the neutral molecule described by this network, best first.
    *
-   * @return
+   * @return unmodifiable list of formulas
    */
-  public int getID() {
-    return id;
-  }
-
-  public void setID(int i) {
-    id = i;
-    setNetworkToAllRows();
-  }
-
-  @NotNull
-  public List<ResultFormula> getMolFormulas() {
-    return molFormulas;
-  }
-
-  public Map<IonNetwork, IonNetworkRelation> getRelations() {
-    return Objects.requireNonNullElse(relations, Map.of());
-  }
+  @NotNull List<ResultFormula> getMolFormulas();
 
   /**
-   * Add a relation to another ion network. This relation could be a modification
-   *
-   * @param net
-   * @param rel
+   * Append formulas, skipping those already present. The first formula should be the best.
    */
-  public void addRelation(IonNetwork net, IonNetworkRelation rel) {
-    if (relations == null) {
-      relations = new TreeMap<>();
-    }
-    relations.put(net, rel);
-  }
+  void addMolFormulas(@NotNull List<ResultFormula> formulas);
 
   /**
-   * Remove a relation to another ion network. This relation could be a modification
+   * Move a formula to the front of the list, marking it as the best one.
    */
-  public void removeRelation(IonNetwork net) {
-    if (relations == null) {
-      return;
-    }
-    relations.remove(net);
-  }
-
-  /**
-   * Clear
-   */
-  public void clearRelation() {
-    relations = null;
-  }
-
-  /**
-   * Create relations identity
-   */
-  public String concatRelationshipsToString() {
-    String name = "";
-    if (relations != null) {
-      name = relations.values().stream().filter(Objects::nonNull).map(rel -> rel.getName(this))
-          .collect(Collectors.joining(", "));
-    }
-
-    return name;
-  }
-
-  public void clearMolFormulas() {
-    molFormulas.clear();
-  }
-
-  /**
-   * The first formula should be the best
-   *
-   * @param molFormulas
-   */
-  public void addMolFormulas(List<ResultFormula> molFormulas) {
-    this.molFormulas.removeAll(molFormulas);
-    this.molFormulas.addAll(molFormulas);
-  }
-
-  /**
-   * The first formula should be the best
-   *
-   * @param molFormulas
-   */
-  public void addMolFormulas(ResultFormula... molFormulas) {
-    this.molFormulas.removeAll(molFormulas);
-    this.molFormulas.addAll(molFormulas);
-  }
-
-  public void addMolFormula(ResultFormula formula) {
-    addMolFormula(formula, false);
-  }
-
-  public void addMolFormula(ResultFormula formula, boolean asBest) {
-    if (!molFormulas.isEmpty()) {
-      molFormulas.remove(formula);
-    }
-
-    if (asBest) {
-      this.molFormulas.add(0, formula);
-    } else {
-      this.molFormulas.add(formula);
-    }
-  }
-
-  public void removeMolFormula(ResultFormula formula) {
-    if (molFormulas != null && !molFormulas.isEmpty()) {
-      molFormulas.remove(formula);
-    }
-  }
+  void setBestMolFormula(@NotNull ResultFormula formula);
 
   /**
    * Best molecular formula (first in list)
    *
-   * @return
+   * @return null if no formula was assigned to this network
    */
-  public ResultFormula getBestMolFormula() {
-    return molFormulas == null || molFormulas.isEmpty() ? null : molFormulas.get(0);
+  default @Nullable ResultFormula getBestMolFormula() {
+    final List<ResultFormula> formulas = getMolFormulas();
+    return formulas.isEmpty() ? null : formulas.getFirst();
   }
 
-  public void setBestMolFormula(ResultFormula formula) {
-    addMolFormula(formula, true);
+  default int size() {
+    return getNodes().size();
   }
 
   /**
-   * Neutral mass of center molecule which is described by all members of this network
+   * @return a list copy of the rows
    */
-  public double getNeutralMass() {
-    return neutralMass == null ? calcNeutralMass() : neutralMass;
+  default @NotNull List<FeatureListRow> getRows() {
+    final List<IonNetworkNode> nodes = getNodes();
+    final List<FeatureListRow> rows = new ArrayList<>(nodes.size());
+    for (final IonNetworkNode node : nodes) {
+      rows.add(node.row());
+    }
+    return rows;
   }
 
-  @Override
-  public IonIdentity put(FeatureListRow key, IonIdentity value) {
-    IonIdentity e = super.put(key, value);
-    if (key.getID() < lowestID || lowestID == -1) {
-      lowestID = key.getID();
-    }
-
-    value.setNetwork(this);
-
-    fireChanged();
-    return e;
+  default @NotNull Stream<FeatureListRow> streamRows() {
+    return getNodes().stream().map(IonNetworkNode::row);
   }
 
-  @Override
-  public IonIdentity remove(Object key) {
-    IonIdentity e = super.remove(key);
-    if (e != null && key instanceof FeatureListRow && ((FeatureListRow) key).getID() <= lowestID) {
-      recalcMinID();
-    }
-
-    if (e != null) {
-      e.setNetwork(null);
-      fireChanged();
-    }
-    return e;
+  default @NotNull Stream<IonIdentity> streamIons() {
+    return getNodes().stream().map(IonNetworkNode::ion);
   }
 
   /**
-   * Finds the minimum row id
+   * The ion types are undefined M+?
    */
-  public int recalcMinID() {
-    lowestID = keySet().stream().mapToInt(FeatureListRow::getID).min().orElse(-1);
-    return lowestID;
+  default boolean isUndefined() {
+    return streamIons().map(IonIdentity::getIonType).anyMatch(IonType::isUndefinedAdduct);
   }
 
-  @Override
-  public void clear() {
-    super.clear();
-    lowestID = -1;
-    fireChanged();
-  }
-
-  @Override
-  public IonIdentity replace(FeatureListRow key, IonIdentity value) {
-    IonIdentity e = super.replace(key, value);
-    if (key.getID() < lowestID || lowestID == -1) {
-      lowestID = key.getID();
-    }
-
-    value.setNetwork(this);
-    fireChanged();
-    return e;
-  }
-
-  public void fireChanged() {
-    resetNeutralMass();
-    resetMaxDev();
-  }
-
-  public void resetNeutralMass() {
-    neutralMass = null;
+  default boolean containsKey(@Nullable FeatureListRow row) {
+    return get(row) != null;
   }
 
   /**
-   * Maximum absolute deviation from central neutral mass
-   */
-  public void resetMaxDev() {
-    maxDev = null;
-  }
-
-  /**
-   * Calculates and sets the neutral mass average and average rt
+   * The ion identity that this network assigns to a row.
    *
-   * @return
+   * @return null if the row is not part of this network
    */
-  public double calcNeutralMass() {
-    neutralMass = null;
-    if (size() == 0) {
+  default @Nullable IonIdentity get(@Nullable FeatureListRow row) {
+    if (row == null) {
+      return null;
+    }
+    for (final IonNetworkNode node : getNodes()) {
+      if (row.equals(node.row())) {
+        return node.ion();
+      }
+    }
+    return null;
+  }
+
+  default void forEach(@NotNull BiConsumer<FeatureListRow, IonIdentity> consumer) {
+    for (final IonNetworkNode node : getNodes()) {
+      consumer.accept(node.row(), node.ion());
+    }
+  }
+
+  /**
+   * Point the ion identities of all rows back to this network.
+   */
+  @NotNull
+  default IonNetwork setNetworkToAllRows() {
+    streamIons().forEach(ion -> ion.setNetwork(this));
+    return this;
+  }
+
+  /**
+   * Neutral mass of the center molecule which is described by all members of this network.
+   * <p>
+   * Implementations cache this value because it is queried often, e.g. by every ion library search
+   * and by sorting. The cache is refreshed whenever the nodes change.
+   */
+  double getNeutralMass();
+
+  /**
+   * Average of the neutral masses that the given nodes point to. Used by the implementations to
+   * (re)fill their neutral mass cache.
+   *
+   * @param nodes the (row, ion) pairs of a network
+   * @return 0 for an empty network or if no row has an m/z
+   */
+  static double calcNeutralMass(@NotNull final List<IonNetworkNode> nodes) {
+    double mass = 0;
+    int counted = 0;
+    for (final IonNetworkNode node : nodes) {
+      // rows without m/z cannot contribute a neutral mass - average over the remaining ones
+      // instead of failing, because this is computed eagerly while networks are built
+      final Double mz = node.row().getAverageMZ();
+      if (mz == null) {
+        continue;
+      }
+      mass += node.ion().getIonType().getMass(mz);
+      counted++;
+    }
+    return counted == 0 ? 0 : mass / counted;
+  }
+
+  /**
+   * Average retention time of all rows of this network.
+   */
+  default double getAvgRT() {
+    final List<IonNetworkNode> nodes = getNodes();
+    if (nodes.isEmpty()) {
       return 0;
     }
-
-    double mass = 0;
-    avgRT = 0;
-    heightSum = 0;
-    for (Entry<FeatureListRow, IonIdentity> e : entrySet()) {
-      mass += e.getValue().getIonType().getMass(e.getKey().getAverageMZ());
-      avgRT += e.getKey().getAverageRT();
-      // sum of heighest peaks heights
-      double height = e.getKey().getMaxDataPointIntensity();
-      heightSum += Double.isNaN(height) ? 1 : height;
+    double rt = 0;
+    int n = 0;
+    for (final IonNetworkNode node : nodes) {
+      final Float averageRT = node.row().getAverageRT();
+      if (averageRT != null) {
+        rt += averageRT;
+        n++;
+      }
     }
-    avgRT = avgRT / size();
-    neutralMass = mass / size();
-    return neutralMass;
+    return rt / n;
   }
 
-  public double getAvgRT() {
-    if (neutralMass == null) {
-      calcNeutralMass();
-    }
-    return avgRT;
-  }
-
-  public double getHeightSum() {
-    if (neutralMass == null) {
-      calcNeutralMass();
+  /**
+   * Summed height of the most intense feature of each row.
+   */
+  default double getHeightSum() {
+    double heightSum = 0;
+    for (final IonNetworkNode node : getNodes()) {
+      final Float height = node.row().getMaxHeight();
+      heightSum += height == null || Float.isNaN(height) ? 0 : height;
     }
     return heightSum;
   }
 
   /**
-   * calculates the maximum deviation from the average mass
-   *
-   * @return
+   * Remove the ion identities of this network from all its rows. The network is unreachable
+   * afterwards because rows are the only owners of ion identities.
    */
-  public double calcMaxDev() {
-    maxDev = null;
-    if (size() == 0) {
-      return 0;
-    }
-
-    neutralMass = getNeutralMass();
-    if (neutralMass == null || neutralMass == 0) {
-      return 0;
-    }
-
-    double max = 0;
-    for (Entry<FeatureListRow, IonIdentity> e : entrySet()) {
-      double mass = getMass(e);
-      max = Math.max(Math.abs(neutralMass - mass), max);
-    }
-    maxDev = max;
-    return maxDev;
-  }
-
-  /**
-   * Neutral mass of entry
-   *
-   * @param e
-   * @return
-   */
-  public double getMass(Entry<FeatureListRow, IonIdentity> e) {
-    return e.getValue().getIonType().getMass(e.getKey().getAverageMZ());
-  }
-
-  public double getMaxDev() {
-    return maxDev == null ? calcMaxDev() : maxDev;
-  }
-
-  /**
-   * All rows point to the same neutral mass
-   *
-   * @param mzTol
-   * @return
-   */
-  public boolean checkAllWithinMZTol(MZTolerance mzTol) {
-    double neutralMass = getNeutralMass();
-    double maxDev = getMaxDev();
-    return mzTol.checkWithinTolerance(neutralMass, neutralMass + maxDev);
-  }
-
-  public int[] getAllIDs() {
-    return keySet().stream().mapToInt(e -> e.getID()).toArray();
-  }
-
-  public void setNetworkToAllRows() {
-    values().stream().forEach(id -> id.setNetwork(this));
-  }
-
-  /**
-   * Checks the calculated neutral mass of the ion annotation against the avg neutral mass
-   *
-   * @param row
-   * @param pid
-   * @return
-   */
-  public boolean checkForAnnotation(FeatureListRow row, IonType pid) {
-    return mzTolerance.checkWithinTolerance(calcNeutralMass(), pid.getMass(row.getAverageMZ()));
-  }
-
-  /**
-   * Checks for links and adds those as partner rows
-   *
-   * @param row
-   * @param pid
-   */
-  public void addAllLinksTo(FeatureListRow row, IonIdentity pid) {
-    double nmass = pid.getIonType().getMass(row.getAverageMZ());
-    this.entrySet().stream().forEach(e -> {
-      if (e.getKey().getID().equals(row.getID())) {
-        double pmass = getMass(e);
-        if (mzTolerance.checkWithinTolerance(pmass, nmass)) {
-          // add to both
-          pid.addPartnerRow(e.getKey(), e.getValue());
-          e.getValue().addPartnerRow(row, pid);
-        }
-      }
-    });
-  }
-
-  public void delete() {
-    entrySet().stream().forEach(e -> {
-      e.getKey().removeIonIdentity(e.getValue());
-    });
-    clear();
-  }
-
-  /**
-   * row has smallest id?
-   *
-   * @param row
-   * @return
-   */
-  public boolean hasSmallestID(FeatureListRow row) {
-    return row.getID() == lowestID;
-  }
-
-  /**
-   * Correlation group id (if existing) is always the one of the first entry
-   *
-   * @return correlation group id or -1
-   */
-  public int getCorrID() {
-    if (isEmpty()) {
-      return -1;
-    }
-    return keySet().iterator().next().getGroupID();
-  }
-
-  /**
-   * Checks if all entries are in the same correlation group
-   *
-   * @return correlation group id or -1
-   */
-  public boolean allSameCorrGroup() {
-    if (isEmpty()) {
-      return true;
-    }
-    int cid = getCorrID();
-    for (FeatureListRow r : keySet()) {
-      if (r.getGroupID() != cid) {
-        return false;
-      }
-    }
-    return true;
-  }
-
-  public MZTolerance getMZTolerance() {
-    return mzTolerance;
-  }
-
-  public void recalcConnections() {
-    // Do not need to do this?
-    // for (Entry<PeakListRow, ESIAdductIdentity> a : entrySet()) {
-    // ESIAdductIdentity adduct = a.getValue();
-    // if (adduct.getA().getAbsCharge() > 0)
-    // adduct.resetLinks();
-    // }
-
-    // add all links
-    for (Entry<FeatureListRow, IonIdentity> a : entrySet()) {
-      IonIdentity adduct = a.getValue();
-      if (adduct.getIonType().getAbsCharge() > 0) {
-        addAllLinksTo(a.getKey(), adduct);
-      }
+  default void delete() {
+    for (final IonNetworkNode node : getNodes()) {
+      node.row().removeIonIdentity(node.ion());
+      node.ion().setNetwork(null);
     }
   }
 
-  @Override
-  public int compareTo(IonNetwork net) {
-    // -1 if this is better
-    return Integer.compare(net.size(), this.size());
-  }
-
+  /// @return the lowest row ID or -1 if empty network
+  int getLowestID();
 }
